--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/styles/styles">
 </head>
 <body>
-    <span></span>
-    <script type="module" src="scripts/index.js"></script>
+    <h1></h1>
+    <canvas></canvas>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
