--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/styles/styles">
 </head>
 <body>
-    <h1></h1>
+    <h1>Caos de Colisiones Cromáticas</h1>
     <canvas></canvas>
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
